# EdgeDesk

./: .coverage  .env.example  .gitignore  BUILD_STATUS.txt  CLAUDE.md  PRD.md  QUICKSTART.md  README.md  conftest.py  edgedesk.spec  main.py  pyproject.toml  ruff.toml
.claude/: settings.json  settings.local.json
core/: agent.py  hotkey.py  llm.py  memory.py  planner.py  prompts.py
db/: crud.py  models.py  session.py  vector_store.py
scheduler/: __init__.py  engine.py  triggers.py
schemas/: models.py
tests/: conftest.py  test_agent.py  test_automation.py  test_db.py  test_integration.py  test_overlay.py  test_panels.py  test_scheduler.py  test_tools.py  test_ui.py
tools/: __init__.py  apps.py  clipboard.py  email_reader.py  files.py  gui.py  notify.py  screen.py
ui/: __init__.py  history_view.py  overlay.py  rule_editor.py  settings.py  tray.py
ui/styles/: __init__.py  components.py  qss.py  theme.py
