[project]
name = "edgedesk"
version = "1.0.0"
description = "Local AI agent for privacy-first desktop automation"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "pyautogui>=0.9.54",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "mss>=9.0.0",
    "pytesseract>=0.3.13",
    "pyqt6>=6.7.0",
    "qtawesome>=1.3.1",
    "qasync>=0.27.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "apscheduler>=3.10.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "pyperclip>=1.9.0",
    "plyer>=2.1.0",
    "watchdog>=4.0.0",
    "psutil>=6.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:langgraph",
    "ignore::langchain_core._api.deprecation.LangChainDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "tools", "db", "scheduler", "ui", "schemas"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
